# scDLKit

./: .gitignore  CHANGELOG.md  CITATION.cff  CODEBASE_CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: annotation-benchmark.yml  ci.yml  docs.yml  external-annotation-evidence.yml  release-testpypi.yml  release.yml
docs/: api.md  comparison.md  conf.py  contributing.md  data.md  evaluation.md  feature_contracts.yml  index.md  install.md  models.md  quickstart.md  roadmap.md  training.md  tutorials.md  visualization.md
docs/_static/: custom.css
docs/_templates/: layout.html
docs/api/: adapters.md  annotation.md  data.md  evaluation.md  foundation.md  index.md  models.md  taskrunner.md  trainer.md
docs/guides/: annotation-benchmarks.md  annotation-on-your-data.md  comparison.md  custom-models.md  data.md  evaluation.md  foundation-models.md  models.md  (+3 more)
examples/: classification_demo.ipynb  compare_models_pbmc.ipynb  custom_model_extension.ipynb  downstream_scanpy_after_scdlkit.ipynb  first_run_synthetic.ipynb  first_run_synthetic.py  reconstruction_sanity_pbmc.ipynb  scgpt_cell_type_annotation.ipynb  scgpt_dataset_specific_annotation.ipynb  scgpt_human_pancreas_annotation.ipynb  scgpt_pbmc_embeddings.ipynb  train_vae_pbmc.ipynb
planning/: README.md  current-focus.md  implementation-map.md  milestone-1-review.md
scripts/: check_feature_docs_contracts.py  check_planning_structure.py  derive_logo_assets.py  execute_tutorial_suite.py  install_from_index.py  merge_tutorial_summaries.py  prepare_tutorial_notebooks.py  render_tutorial_status.py  run_annotation_benchmark.py  run_external_annotation_evidence.py  run_foundation_annotation_smoke.py  run_foundation_smoke.py  run_quality_suite.py  smoke_taskrunner.py  summarize_quality_suite.py  tutorial_catalog.py  tutorial_publication.py
tests/: conftest.py  test_adapters.py  test_annotation_aliases.py  test_annotation_benchmark.py  test_external_annotation_evidence.py  test_foundation_annotation.py  test_foundation_annotation_persistence.py  test_foundation_annotation_runner.py  test_foundation_scgpt.py  test_models.py  test_openproblems_datasets.py  test_prepare.py  test_quality_regression.py  test_runner.py  test_tutorial_publication.py
(+72 files in other folders)
